using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constant 
{
    public const string PlayerTag = "Player";
    public const string EnemyTag = "Enemy";

    //anim
    public const string AnimIdle = "idle";

    public const string AnimRun = "run";

    public const string AnimHit = "hit";

    public const string AnimFall = "fall";

    public const string AnimDie = "die";

    public const string AnimJump = "jump";

    public const string AnimDoubleJump = "doubleJump";

    public const string AnimTouchBrick = "BrickCoinTouch";

    public const string AnimTouchBrickNormal = "isTouch";

    public const string AnimMovingPoint = "isMoving";
}
